--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
       socket.on('chat message', function(msg){
         $('#messages').append($('<li>').text(msg));
       });
-      socket.on('disconnect', msg => {
-        $('#messages').append($('<li>').text(msg));
+      socket.on('message', message => {
+        $('.messages').append(`<p>${message}</p>`)
       })
+      
     });
   </script>
 </html>
